# viaptr

./: Cargo.toml  README.md  rustfmt.toml
src/: compact.rs  impl_alloc.rs  lib.rs  shy_atomic.rs  std.rs  triomphe.rs
tests/: main.rs
